--- a/contribuer (35).html
+++ b/contribuer (35).html
@@ -1,13 +1,14 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contribuer 1 - Paana</title>
-  <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française" />
-  <link href="header-footer.css" rel="stylesheet" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Contribuer 3- Paana</title>
+<meta content="Paana - Base de connaissances sur la santé publique en Polynésie française" name="description"/>
+<link href="header-footer.css" rel="stylesheet"/>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
+<style>
     :root {
       --primary: #007b7f;
       --background: #fdfdf0;
@@ -89,7 +90,6 @@
       overflow-y: auto;
       padding: 1.5rem;
     }
-
     .event-box {
       border: 2px solid var(--primary);
       border-radius: 8px;
@@ -98,12 +98,12 @@
       margin-bottom: 1.5rem;
     }
     .title-central {
-  margin-top: 0;
-  margin-bottom: 1rem;
-  color: var(--primary); /* couleur bandeau */
-  font-weight: bold;
-  text-decoration: none; /* retire le souligné */
-}
+      margin-top: 0;
+      margin-bottom: 1rem;
+      color: var(--primary);
+      font-weight: bold;
+      text-decoration: none;
+    }
     .pluriannuel-badge {
       display: inline-block;
       background-color: var(--primary);
@@ -113,7 +113,6 @@
       margin-left: 6px;
       border-radius: 4px;
     }
-
     .collapsible-box {
       border: 1px solid var(--gray);
       border-radius: 6px;
@@ -163,77 +162,220 @@
       border-left: 1px solid #ddd;
       overflow-y: auto;
     }
+    .event.selected {
+      background-color: #fff8b0;
+      font-weight: bold;
+    }
+    #fiche-content .fiche-section {
+      margin-bottom: 1rem;
+    }
+    #fiche-content a {
+      color: var(--primary);
+      text-decoration: none;
+    }
+    #fiche-content a:hover {
+      text-decoration: underline;
+    }
+    #fiche-navigation {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 1.5rem;
+    }
+    #fiche-navigation button {
+      background-color: var(--primary);
+      color: white;
+      border: none;
+      padding: 0.6rem 1.2rem;
+      font-size: 1rem;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+    #fiche-navigation button:hover {
+      background-color: #005f62;
+    }
   </style>
 </head>
 <body>
 <header>
-  <div class="logo">
-    <span class="brand">Paana</span>
-    <div class="trait"></div>
-    <div class="signature">Emmanuelle RUPP-TERRIS</div>
-  </div>
-  <nav>
-    <a href="a-propos.html">A PROPOS</a>
-    <a href="contribuer.html">CONTRIBUER</a>
-    <a href="https://forms.gle/PR8ZHvSXxLNYETtx9" target="_blank">SOUMETTRE</a>
-    <a href="mailto:frise.sante.pf@gmail.com"><i class="fas fa-envelope fa-lg"></i></a>
-  </nav>
+<div class="logo">
+<span class="brand">Paana</span>
+<div class="trait"></div>
+<div class="signature">Emmanuelle RUPP-TERRIS</div>
+</div>
+<nav>
+<a href="a-propos.html">A PROPOS</a>
+<a href="contribuer.html">CONTRIBUER</a>
+<a href="https://forms.gle/PR8ZHvSXxLNYETtx9" target="_blank">SOUMETTRE</a>
+<a href="mailto:frise.sante.pf@gmail.com"><i class="fas fa-envelope fa-lg"></i></a>
+</nav>
 </header>
-
 <main>
-  <div class="timeline-layout">
-    <div class="years-container">
-      <button id="scroll-up">↑</button>
-      <div class="years-column" id="years-column"></div>
-      <button id="scroll-down">↓</button>
-    </div>
-
-    <div class="events-column">
-      <div id="loader" style="text-align:center; margin-top:3rem; font-style:italic;">Chargement...</div>
-      <div id="message-attente" style="text-align:center; margin-top:3rem; font-style:italic; color:#666;">Aucun événement affiché. Sélectionnez une année dans la colonne de gauche.</div>
-
-      <div class="collapsible-box" id="box-superieur">
-        <div class="collapsible-toggle" onclick="toggleCollapse('box-superieur')">
-          <i class="fas fa-chevron-right"></i> Événements survenus dans les 2 années précédentes
+<div class="timeline-layout">
+<div class="years-container">
+<button id="scroll-up">↑</button>
+<div class="years-column" id="years-column"></div>
+<button id="scroll-down">↓</button>
+</div>
+<div class="events-column">
+<div id="loader" style="text-align:center; margin-top:3rem; font-style:italic;">Chargement...</div>
+<div id="message-attente" style="text-align:center; margin-top:3rem; font-style:italic; color:#666;">Aucun événement affiché. Sélectionnez une année dans la colonne de gauche.</div>
+<div class="collapsible-box" id="box-superieur">
+<div class="collapsible-toggle" onclick="toggleCollapse('box-superieur')">
+<i class="fas fa-chevron-right"></i> Événements survenus dans les 2 années précédentes
         </div>
-        <div class="collapsible-content" id="bloc-superieur"></div>
-      </div>
-
-      <div class="event-box">
-        <h4 class="title-central">Événements de l'année</h4>
-        <div id="events-central-list"></div>
-      </div>
-
-      <div class="collapsible-box" id="box-inferieur">
-        <div class="collapsible-toggle" onclick="toggleCollapse('box-inferieur')">
-          <i class="fas fa-chevron-right"></i> Événements survenus dans les 2 années suivantes
+<div class="collapsible-content" id="bloc-superieur"></div>
+</div>
+<div class="event-box">
+<h4 class="title-central">Événements de l'année</h4>
+<div id="events-central-list"></div>
+</div>
+<div class="collapsible-box" id="box-inferieur">
+<div class="collapsible-toggle" onclick="toggleCollapse('box-inferieur')">
+<i class="fas fa-chevron-right"></i> Événements survenus dans les 2 années suivantes
         </div>
-        <div class="collapsible-content" id="bloc-inferieur"></div>
-      </div>
-    </div>
-
-    <div class="fiche-column">
-      <h3 id="fiche-titre">Détails</h3>
-      <div id="fiche-content">Cliquez sur un événement pour voir sa fiche complète.</div>
-    </div>
-  </div>
+<div class="collapsible-content" id="bloc-inferieur"></div>
+</div>
+</div>
+<div class="fiche-column">
+<h3 id="fiche-titre">Détails</h3>
+<div id="fiche-content">Cliquez sur un événement pour voir sa fiche complète.</div>
+</div>
+</div>
 </main>
-
+<!-- SCRIPT will be appended below -->
 <script>
-document.addEventListener("DOMContentLoaded", () => {
+window.addEventListener("DOMContentLoaded", () => {
   const yearCol = document.getElementById("years-column");
-  let eventData = [];
+  window.eventData = [];
+
+  const categoryIcons = {
+    "Éducation": "fa-graduation-cap",
+    "Nutrition": "fa-apple-whole",
+    "Infrastructure": "fa-building",
+    "Ressources humaines": "fa-users",
+    "Législation": "fa-scale-balanced",
+    "Communication": "fa-bullhorn",
+    "Recherche": "fa-flask",
+    "Hygiène": "fa-soap",
+    "Technologie": "fa-microchip",
+    "Vaccination": "fa-syringe",
+    "Environnement": "fa-leaf",
+    "Santé publique": "fa-heart-pulse",
+    "Financement": "fa-hand-holding-dollar"
+  };
+
+  function stringToColor(str) {
+    let hash = 0;
+    for (let i = 0; i < str.length; i++) {
+      hash = str.charCodeAt(i) + ((hash << 5) - hash);
+    }
+    let color = '#';
+    for (let i = 0; i < 3; i++) {
+      const value = (hash >> (i * 8)) & 0xff;
+      color += ('00' + value.toString(16)).slice(-2);
+    }
+    return color;
+  }
+
+  function renderEvents(year) {
+    const top = document.getElementById("bloc-superieur");
+    const center = document.getElementById("events-central-list");
+    const bottom = document.getElementById("bloc-inferieur");
+    top.innerHTML = center.innerHTML = bottom.innerHTML = "";
+
+    const makeEventText = (e, idx) => {
+      const icon = categoryIcons[e.maincat] ? `<i class="fas ${categoryIcons[e.maincat]}" title="${e.maincat}" style="margin-right:0.4rem;"></i>` : "";
+      const color = stringToColor(e.themes || "");
+      return '<div class="event" data-id="' + idx + '" style="border-left:5px solid ' + color + ';padding-left:0.6rem;background:white;cursor:pointer;" onclick="window.renderFiche(window.eventData[' + idx + '],' + idx + ')">' +
+               '<div>' + icon + '&nbsp;&nbsp;' + e.title + 
+               (e.start !== e.end ? ' <em>(' + e.start + '–' + e.end + ')</em>' : '') +
+               (e.start !== e.end ? '<span class="pluriannuel-badge">Pluriannuel</span>' : '') +
+               '</div></div>';
+    };
+
+    window.eventData.forEach((e, idx) => {
+      if (e.start <= year && e.end >= year) {
+        center.insertAdjacentHTML("beforeend", makeEventText(e, idx));
+      }
+    });
+
+    const groupByYear = (from, to) => {
+      const map = {};
+      for (let y = from; y <= to; y++) {
+        const evts = window.eventData.filter(e => (e.start <= y && e.end >= y));
+        if (evts.length) map[y] = evts;
+      }
+      return map;
+    };
+
+    const renderContextual = (container, map) => {
+      for (const [y, events] of Object.entries(map)) {
+        const title = document.createElement("h5");
+        title.textContent = y;
+        container.appendChild(title);
+        const ul = document.createElement("ul");
+        events.forEach(e => {
+          const li = document.createElement("li");
+          li.innerHTML = makeEventText(e, window.eventData.indexOf(e));
+          ul.appendChild(li);
+        });
+        container.appendChild(ul);
+      }
+    };
+
+    renderContextual(top, groupByYear(year - 2, year - 1));
+    renderContextual(bottom, groupByYear(year + 1, year + 2));
+
+    const total = top.children.length + center.children.length + bottom.children.length;
+    document.getElementById("message-attente").style.display = total ? "none" : "block";
+    document.getElementById("loader").style.display = "none";
+  }
+
+  
+  window.renderFiche = function(e, index) {
+    document.querySelectorAll('.event').forEach(el => el.style.backgroundColor = '');
+    const current = document.querySelectorAll('.event[data-id="' + index + '"]')[0];
+    if (current) current.style.backgroundColor = "#fff8b0";
+
+    const titre = document.getElementById("fiche-titre");
+    const fiche = document.getElementById("fiche-content");
+
+    // Titre bleu et gras
+    titre.innerHTML = `<span style="color: var(--primary); font-weight: bold;">${e.title}</span>`;
+
+    const mots = (e.keywords || []).map(k => '<a href="https://decs.pf/fiche?q=' + encodeURIComponent(k) + '" target="_blank">' + k + '</a>').join(', ');
+    const related = window.eventData.filter(x => x.themes === e.themes);
+    const other = related.map(r =>
+      '<li' + (r.title === e.title ? ' style="font-weight:bold;"' : '') + '><a href="#" onclick="window.renderFiche(window.eventData[' + window.eventData.indexOf(r) + '],' + window.eventData.indexOf(r) + ');return false;">' + r.title + '</a></li>'
+    ).join('');
+
+    fiche.innerHTML = `
+      ${e.start && e.end ? `<p><strong>Période :</strong> ${e.start === e.end ? e.start : e.start + ' – ' + e.end}</p>` : ''}
+      ${e.maincat ? `<p><strong>Catégorie principale :</strong> ${e.maincat}</p>` : ''}
+      ${(e.subcats || []).length ? `<p><strong>Catégorie secondaire :</strong> ${e.subcats.join(', ')}</p>` : ''}
+      ${e.themes ? `<p><strong>Thème :</strong> ${e.themes}</p>` : ''}
+      ${mots ? `<p><strong>Mots clefs :</strong> ${mots}</p>` : ''}
+      ${e.description ? `<p><strong>Description :</strong> ${e.description}</p>` : ''}
+      ${e.source ? `<p><strong>Source :</strong> <a href="${e.source}" target="_blank">${e.source}</a></p>` : ''}
+      <h4>Autres événements du même thème</h4>
+      <ul>${other}</ul>
+      <div id="fiche-navigation">
+        <button onclick="window.renderFiche(window.eventData[${index - 1}], ${index - 1})" ${index <= 0 ? 'disabled' : ''}>Précédent</button>
+        <button onclick="window.renderFiche(window.eventData[${index + 1}], ${index + 1})" ${index >= window.eventData.length - 1 ? 'disabled' : ''}>Suivant</button>
+      </div>
+    `;
+  };
+
+
+  window.toggleCollapse = function(id) {
+    document.getElementById(id).classList.toggle("open");
+  };
 
   fetch("events.json?" + Date.now())
-    .then(res => res.json())
-    .then(data => {
-      if (!Array.isArray(data)) throw new Error("Format JSON invalide.");
-      eventData = data;
-
-      const years = [...new Set(data.flatMap(e =>
-        Array.from({ length: e.end - e.start + 1 }, (_, i) => e.start + i)
-      ))].sort((a, b) => a - b);
-
+    .then(r => r.json())
+    .then(d => {
+      window.eventData = d;
+      const years = [...new Set(d.flatMap(e => Array.from({length: e.end - e.start + 1}, (_, i) => e.start + i)))].sort((a, b) => a - b);
       years.forEach(year => {
         const btn = document.createElement("button");
         btn.className = "year-btn";
@@ -241,7 +383,6 @@ document.addEventListener("DOMContentLoaded", () => {
         btn.dataset.year = year;
         yearCol.appendChild(btn);
       });
-
       const yearButtons = document.querySelectorAll(".year-btn");
       yearButtons.forEach(btn => {
         btn.addEventListener("click", () => {
@@ -250,7 +391,6 @@ document.addEventListener("DOMContentLoaded", () => {
           renderEvents(parseInt(btn.dataset.year));
         });
       });
-
       if (yearButtons.length) yearButtons[0].click();
 
       document.getElementById("scroll-up").addEventListener("click", () => scrollYear(-1));
@@ -265,60 +405,8 @@ document.addEventListener("DOMContentLoaded", () => {
         }
       }
     });
-
-  function renderEvents(year) {
-    const top = document.getElementById("bloc-superieur");
-    const centerList = document.getElementById("events-central-list");
-    const bottom = document.getElementById("bloc-inferieur");
-    top.innerHTML = centerList.innerHTML = bottom.innerHTML = "";
-
-    const makeEventText = e =>
-      `${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}${e.start !== e.end ? '<span class="pluriannuel-badge">Pluriannuel</span>' : ""}`;
-
-    eventData.forEach(e => {
-      if (e.start <= year && e.end >= year) {
-        const div = document.createElement("div");
-        div.innerHTML = makeEventText(e);
-        centerList.appendChild(div);
-      }
-    });
-
-    const groupByYear = (from, to) => {
-      const map = {};
-      for (let y = from; y <= to; y++) {
-        const evts = eventData.filter(e => (e.start === e.end && e.start === y) || (e.start <= y && e.end >= y));
-        if (evts.length) map[y] = evts;
-      }
-      return map;
-    };
-
-    const renderContextual = (container, map) => {
-      for (const [y, events] of Object.entries(map)) {
-        const title = document.createElement("h5");
-        title.textContent = y;
-        container.appendChild(title);
-        const ul = document.createElement("ul");
-        events.forEach(e => {
-          const li = document.createElement("li");
-          li.innerHTML = makeEventText(e);
-          ul.appendChild(li);
-        });
-        container.appendChild(ul);
-      }
-    };
-
-    renderContextual(top, groupByYear(year - 2, year - 1));
-    renderContextual(bottom, groupByYear(year + 1, year + 2));
-
-    const totalEvents = top.children.length + centerList.children.length + bottom.children.length;
-    document.getElementById("message-attente").style.display = totalEvents ? "none" : "block";
-    document.getElementById("loader").style.display = "none";
-  }
-
-  window.toggleCollapse = function(id) {
-    document.getElementById(id).classList.toggle("open");
-  };
 });
 </script>
 </body>
 </html>
+
